--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stéphane Dunogué</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
         <h1>Stéphane Dunogué</h1>
-        <div id="photo+infos">
-            <div id="photo_moi"><img src="images/qui_fait_peur.png" alt="photo" title="moi"/><br>
-            Age : 38 ans<br>
-            Résidence : Bordeaux<br>
-            e-mail : meilleurjoueurdumonde@gmail.com<br>
-            Mobilité Géographique : Partout</div>
+        <div class="row">
+            <div id="infos">
+                <div id="photo_moi"><img src="images/qui_fait_peur.png" alt="photo" title="moi"/><br>
+                <br><u>Age</u> : 38 ans<br>
+                <u>Résidence</u> : Bordeaux<br>
+                <u>e-mail</u> : meilleurjoueurdumonde@gmail.com<br>
+                <u>Mobilité Géographique</u> : Partout</div>
+            </div>
+            <div id="posteCitation">
+                <h2>Poste recherché : Footballeur professionnel</h2><br>
+                <p id="citation">"La routourne va vite tourner" - Franck Ribéry (2013)</p>
+            </div>
         </div>
     </header>
-
-    <div id="citation">
-        "La routourne va vite tourner" - Franck Ribéry 2013
-    </div>
 
     <section>
         <article>
             <div id="formations">
-                <h2>Formations</h2>
+                <h3>Formations</h3>
                 <ul>
                     <li>1990-1995 : Ecole Nationale des Unijambistes de Vitrolles</li>
                     <li>1995-2000 : Centre de Formation des Aveugles de Saint-Cloud</li>
@@ -34,16 +37,16 @@
             </div>
 
             <div id="experiences_pro">
-                <h2>Expériences Professionnelles</h2>
+                <h3>Expériences Professionnelles</h3>
                 <ul>
                     <li>2002-2008 : Olympique de Mauvaise foi</li>
                     <li>2008-2016 : Real de C'est pas moi</li>
-                    <li>2016-2022 : FC Mais y'a main Monsieur l'arbitre</li>
+                    <li>2016-2022 : FC Mais y'a main monsieur l'arbitre</li>
                 </ul>
             </div>
             
             <div id="competences_titres">
-                <h2>Compétences & Titres</h2>
+                <h3>Compétences & Titres</h3>
                 <ul>
                     <li>Meilleur défenseur saison automne/hiver</li>
                     <li>Recordman du nombre de cartons rouges en 1 match (5)</li>
@@ -54,7 +57,7 @@
             </div>
             
             <div id="centres_interet">
-                <h2>Centres d'intérêts</h2>
+                <h3>Centres d'intérêts</h3>
                 <ul>
                     <li>Littérature antique</li>
                     <li>Kickboxing</li>
@@ -68,12 +71,12 @@
 
         <aside>
             <h3>Interview du joueur</h3>
-            <p>"J'ai deux rêves : Gagner la Ligue des Champions et rencontrer Jean-Claude Van Damme."</p>
+            <p>"J'ai deux rêves : Gagner la Ligue des Champions et rencontrer <br>Jean-Claude Van Damme."</p>
 
             <h3>Interview d'un adversaire</h3>
             <p>"Alors moi je discutais tranquillement avec le gardien, quand tout à coup, j'ai senti des crampons sur ma nuque ... 
-            Ce qui m'a le plus étonné c'est que je n'avais même pas le ballon ... j'étais remplaçant !
-            Il est arrivé par derrière tel un pélican j'ai pas compris ..."</p>    
+            <br>Ce qui m'a le plus étonné c'est que je n'avais même pas le ballon ... j'étais remplaçant !
+            <br>Il est arrivé par derrière tel un pélican j'ai pas compris ..."</p>    
         </aside>
     </section>
 </body>
